--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon ./src/index.ts",
     "clean": "rimraf build/",
     "zip": "bestzip Archive.zip .",
-    "copy": "xcopy src\\config build\\config && copy .npmrc build\\.npmrc && copy package.json build\\package.json",
+    "rimraf": "./node_modules/rimraf/bin.js",
+    "copy": "cp -rf src/config build/config && cp .npmrc build/.npmrc && cp package.json build/package.json",
     "build": "npm run clean && npx tsc && npm run copy && cd build && npm run zip && cd ..",
     "migration:run": "db-migrate up",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
